# PersonReID

./: CMakeLists.txt  README.md
includes/: CCmdListRcs.h  Common.h  Data.h  Image.h  Interpreter.h  Mainframe.h
includes/Commands/: CCmdAddImg.h  CCmdListRcs.h  CmdAddImg.h  CmdDelImg.h  CmdExit.h  CmdHelp.h  CmdListRcs.h  CmdLoadImage.h  CmdLoadImg.h  CmdNotValid.h  CmdSaveImg.h  Command.h  Commands.h
lib/: CMakeLists.txt  hellolib.cpp  hellolib.h
src/: CMakeLists.txt  Data.cpp  Image.cpp  Interpreter.cpp  Mainframe.cpp  main.cpp
src/Commands/: CCmdAddImg.cpp  CCmdListRcs.cpp  CMakeLists.txt  CmdAddImg.cpp  CmdDelImg.cpp  CmdExit.cpp  CmdHelp.cpp  CmdListRcs.cpp  CmdLoadImage.cpp  CmdLoadImg.cpp  CmdNotValid.cpp  CmdSaveImg.cpp  Command.cpp
